.metals/.reports/metals/r_scala-toplevel-mtags_1687974628886
id: file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala:[41..42) in Input.VirtualFile("file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala", "package com.bmmedia.playground



object {
  implicit def toTry[A](a: A): Try[A] = Try(a)
}")
file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala:5: error: expected identifier; obtained lbrace
object {
       ^